# kirchhoff-migration

./: .gitignore  CMakeLists.txt  README.md
include/: adjoint_kirchhoff.h  environment_presets.h  forward_kirchhoff.h  io_util.h  plot_util.h  seismic_model.h
include/linalg/: cuda_ops.cuh  linalg_dispatch.h
include/optimization/: least_squares.h  linalg.h  spgl1_bpdn.h
src/: adjoint_kirchhoff.cpp  environment_presets.cpp  forward_kirchhoff.cpp  io_util.cpp  main.cpp  plot_util.cpp  seismic_model.cpp
src/linalg/: cuda_ops.cu  linalg_dispatch.cpp
src/optimization/: least_squares.cpp  linalg.cpp  spgl1_bpdn.cpp
